--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ article img{ /*размер изображений слайдера*/
 #switch3:checked ~ #controls label:nth-child(2),
 #switch4:checked ~ #controls label:nth-child(3),
 #switch5:checked ~ #controls label:nth-child(4){
-	background: url('/img/next.png') no-repeat; /*заливка фона картинкой без повторений*/
+	background: url('/img/svg/arow.svg') no-repeat; /*заливка фона картинкой без повторений*/
 	background-color: rgba(0, 229, 255, 0.532);
 	background-size: cover;
 	border-radius: 30%;
